Updated footer content

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 	<div class="container-fluid bg-light pt-4 pb-2">
 		<div class="row">
 			<div class="col-md-12 text-center font-weight-bold">
-				<p>© jsnav.com all right reserved.</p>
+				<p>© <a href="https://junsantilla.github.io/jsnav/">junsantilla.github.io/jsnav</a> All rights reserved.</p>
 			</div>
 		</div>
 	</div>
