--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" crossorigin="anonymous">
 		<link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
-		<style> body {font-family: 'Roboto',sans-serif;} </style>
+		<style> body {font-family: 'Roboto',sans-serif; padding: 0; margin: 0;} </style>
 
 		<link rel="stylesheet" href="jsnav.css">
 	</head>
 	<body>
-		<div class="jsnav-header bg-light sticky-top">
-			<div class="jsnav-header-wrapper container">
-				<div class="logo font-weight-bold">
-					<a href="#">DEMO</a>
+		<div class="jsnav-header sticky-top">
+			<div class="jsnav-header-wrapper">
+				<div class="logo">
+					<a href="#">Demo</a>
 				</div> <!-- .logo -->
 				<div class="burger-menu">
 					<div class="hamburger-inner"></div>
