Add sticky variable

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="jsnav.css">
 	</head>
 	<body>
-		<div class="jsnav-header sticky-top">
+		<div class="jsnav-header">
 			<div class="jsnav-header-wrapper">
 				<div class="logo">
 					<a href="#">Demo</a>
